# How-to-launch-a-meme-coin-on-solana

./: Cargo.toml  LICENSE  README.md
src/: main.rs
