[package]
name = "solana_token_creator"
version = "0.1.0"
edition = "2021"

authors = ["037!"]
description = "solana launcher"
license = "MIT"

[dependencies]
solana-sdk = "1.8.0"
solana-client = "1.8.0"
spl-token = "3.2.0"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
solana-program = "1.8.0"  # Add this line
